Menu bar collapsing correctly and also the padding for nav-bar

--- a/TrialWebsite/Content/Custom.css
+++ b/TrialWebsite/Content/Custom.css
@@ -171,6 +171,7 @@ h6 {
 .navbar-custom {
     background-color: #222222;
     border-color: transparent;
+
 }
 
     .navbar-custom .navbar-brand {
@@ -232,7 +233,7 @@ h6 {
 @media (min-width: 768px) {
     .navbar-custom {
         background-color: transparent;
-        padding: 25px 0;
+        padding: 5px 0;
         -webkit-transition: padding 0.3s;
         -moz-transition: padding 0.3s;
         transition: padding 0.3s;
